trabajando en los botones de categorias del nav

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
 
       <ul>
         <li>
-          <a href="/">All</a>
+          <a id="all" class="boton-categoria" >All </a>
         </li>
         <li>
-          <a href="/">Clothes</a>
+          <a id="furiture" class="boton-categoria" >Furnitures</a>
         </li>
         <li>
-          <a href="/">Electronics</a>
+          <a id="Gardening" class="boton-categoria" >Gardening</a>
         </li>
         <li>
-          <a href="/">Furnitures</a>
+          <a id="clothes" class="boton-categoria" >Clothes</a>
         </li>
         <li>
-          <a href="/">Toys</a>
+          <a id="toys" class="boton-categoria" >Toys</a>
         </li>
         <li>
-          <a href="/">Others</a>
+          <a id="others" class="boton-categoria" >Others</a>
         </li>
       </ul>
     </div>
@@ -136,15 +136,6 @@
         <img src="./icons/icon_close.png" alt="close">
       </div>
 
-      <div class="shopping-cart">
-        <figure>
-          <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
-        </figure>
-        <p>Bike</p>
-        <p>$30,00</p>
-        <img src="./icons/icon_close.png" alt="close">
-      </div>
-
       <div class="order">
         <p>
           <span>Total</span>
@@ -160,19 +151,14 @@
   </aside>
 
   <aside class="product-detail-secondary inactive">
+
     <div class="product-detail-close">
       <img src="./icons/icon_close.png" alt="close">
     </div>
     <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
-    <div class="product-info-secondary">
-      <p>$35,00</p>
-      <p>Bike</p>
-      <p>With its practical position, this bike also fulfills a decorative function, add your hall or workspace.</p>
-      <button class="primary-button add-to-cart-button">
-        <img src="./icons/bt_add_to_cart.svg" alt="add to cart">
-        Add to cart
-      </button>
-    </div>
+    esto se rellena con JS
+
+    
   </aside>
 
 
